--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Intent Demo</string>
+    <string name="enter_your_phone_number">Enter your phone number</string>
+    <string name="send">Send</string>
+    <string name="implicit_custom">Implicit custom</string>
+    <string name="dial_phone">Dial Phone</string>
 </resources>
